--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="http://localhost:3000/asset/style.css" />
     <title>Aura</title>
   </head>
   <body>
